# http-server-cpp

./: CMakeLists.txt  README.md  httpServer.cpp  server.cpp
html/: 404.html  index.html  page.html
static/: styles.css
